Teens For Teens Kenya website

--- a/index.html
+++ b/index.html
@@ -96,17 +96,11 @@
 
         <div class="mobile-sidebar__footer">
             <div class="mobile-sidebar__social">
-                <a href="#" class="mobile-sidebar__social-link">
+                <a href="https://www.facebook.com/61579905541139/" class="mobile-sidebar__social-link">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#" class="mobile-sidebar__social-link">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="#" class="mobile-sidebar__social-link">
+                <a href="https://www.instagram.com/teensforteenskenya/" class="mobile-sidebar__social-link">
                     <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#" class="mobile-sidebar__social-link">
-                    <i class="fab fa-linkedin-in"></i>
                 </a>
             </div>
             <div class="mobile-sidebar__contact">
