--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <i class="fas fa-quote-left text-green-800 text-xl"></i>
                     </div>
                     <blockquote class="ceo-quote">
-                        "At TeensforTeens Kenya, we believe in this. We don't just plant trees, we grill minds, we plant hope, we plant purpose. Be part of the movement"
+                        "At TeensforTeens Kenya, we believe in this. We don't just plant trees, we green minds, we plant hope, we plant purpose. Be part of the movement"
                     </blockquote>
                 </div>
 
