--- a/index.html
+++ b/index.html
@@ -495,16 +495,15 @@
                          alt="Photo of William Indakwa">
                     <h4 class="team-name">William Indakwa</h4>
                     <p class="team-role">Secretary</p>
-                    <a href="mailto:indakwawilliam@gmail.com" class="team-email">indakwawilliam@gmail.com</a>
+                    <a href="mailto:williamindakwa43@gmail.com" class="team-email">williamindakwa43@gmail.com</a>
                 </div>
                 
                 <div class="team-card fade-up delay-300">
                     <img class="team-photo" 
-                         src="https://placehold.co/128x128/fcc419/1a472a?text=Straw" 
+                         src="https://placehold.co/128x128/fcc419/1a472a?text=Rex" 
                          alt="Photo of Rex Omori Mwale">
                     <h4 class="team-name">Rex Omori Mwale</h4>
                     <p class="team-role">Treasurer</p>
-                    <p class="team-description">Primary Liaison</p>
                 </div>
             </div>
             
