--- a/gallery.html
+++ b/gallery.html
@@ -242,6 +242,46 @@
                         <p class="gallery-caption-text">The TTK team hands out success cards to the school's administrators</p>
                     </div>
                 </div>
+
+                <div class="gallery-item fade-up">
+                    <img src="resources/projects/success-card-a.jpg" alt="Girl receiving Success Card" class="gallery-image">
+                    <div class="gallery-caption">
+                        <h4 class="gallery-caption-title">Empowering Future Innovators</h4>
+                        <p class="gallery-caption-text">A KCSE candidate receives her Success Card, along with insights on harnessing agriculture for skill development, food production, and reducing youth unemployment after high school.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item fade-up">
+                    <img src="resources/projects/success-card-b.jpg" alt="Boy receiving Success Card" class="gallery-image">
+                    <div class="gallery-caption">
+                        <h4 class="gallery-caption-title">Cultivating Positive Engagement</h4>
+                        <p class="gallery-caption-text">Distributing Success Cards to male candidates, reinforcing the importance of constructive engagement in agriculture to deter involvement in drug abuse and crime post-KCSE.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item fade-up">
+                    <img src="resources/projects/success-card-c.jpg" alt="Another boy receiving Success Card" class="gallery-image">
+                    <div class="gallery-caption">
+                        <h4 class="gallery-caption-title">Investing in Tomorrow's Food Security</h4>
+                        <p class="gallery-caption-text">Another male candidate receives his Success Card, highlighting the critical role high school leavers can play in national food production through agricultural ventures and acquired skills.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item fade-up">
+                    <img src="resources/projects/success-card-d.jpg" alt="Team addressing students in a classroom" class="gallery-image">
+                    <div class="gallery-caption">
+                        <h4 class="gallery-caption-title">Educating on Agri-Entrepreneurship</h4>
+                        <p class="gallery-caption-text">Our team addresses students in a classroom, emphasizing how agricultural involvement can provide vital skills, contribute to food production, and reduce high rates of youth unemployment.</p>
+                    </div>
+                </div>
+
+                <div class="gallery-item fade-up">
+                    <img src="resources/projects/success-card-e.jpg" alt="CEO signing cards in teacher's office" class="gallery-image">
+                    <div class="gallery-caption">
+                        <h4 class="gallery-caption-title">Dedication to Student Welfare</h4>
+                        <p class="gallery-caption-text">Our CEO personally signs Success Cards in the teacher's office, a testament to TeensforTeens' commitment to empowering students to pursue productive paths and avoid negative influences.</p>
+                    </div>
+                </div>
             </div>
             
             <div class="text-center mt-12 mb-16">
